--- a/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
@@ -31,6 +31,12 @@
                 <span class="bi bi-geo-alt-fill-nav-menu" aria-hidden="true"></span> Localisations
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="systeme-partenaires">
+                <span class="bi bi-geo-alt-fill-nav-menu" aria-hidden="true"></span> Systeme Partenaires
+            </NavLink>
+        </div>
     </nav>
 </div>
 
