--- a/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Presentation.Web</a>
     </div>
@@ -35,6 +35,8 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="systeme-partenaires">
                 <span class="bi bi-geo-alt-fill-nav-menu" aria-hidden="true"></span> Systeme Partenaires
+            <NavLink class="nav-link" href="unitemesure">
+                <span class="bi bi-thermometer-half-nav-menu" aria-hidden="true"></span> Unités de mesure
             </NavLink>
         </div>
     </nav>
