--- a/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
@@ -33,10 +33,13 @@
         </div>
 
         <div class="nav-item px-3">
+
             <NavLink class="nav-link" href="systeme-partenaires">
                 <span class="bi bi-geo-alt-fill-nav-menu" aria-hidden="true"></span> Systeme Partenaires
             <NavLink class="nav-link" href="unitemesure">
                 <span class="bi bi-thermometer-half-nav-menu" aria-hidden="true"></span> Unités de mesure
+            <NavLink class="nav-link" href="utilisateurs">
+                <span class="bi bi-geo-alt-fill-nav-menu" aria-hidden="true"></span> Utilisateurs
             </NavLink>
         </div>
     </nav>
