sonde missing val min val max

--- a/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Layout/NavMenu.razor
@@ -36,8 +36,12 @@
 
             <NavLink class="nav-link" href="systeme-partenaires">
                 <span class="bi bi-geo-alt-fill-nav-menu" aria-hidden="true"></span> Systeme Partenaires
+            </NavLink>
+
             <NavLink class="nav-link" href="unitemesure">
                 <span class="bi bi-thermometer-half-nav-menu" aria-hidden="true"></span> Unités de mesure
+            </NavLink>
+
             <NavLink class="nav-link" href="utilisateurs">
                 <span class="bi bi-geo-alt-fill-nav-menu" aria-hidden="true"></span> Utilisateurs
             </NavLink>
