--- a/src/Presentation.Web/Presentation.Web/Components/Pages/Localisations/Index.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/Localisations/Index.razor
@@ -1,5 +1,6 @@
 @page "/localisations"
 @using Application.DTOs
+@using Application.DTOs.Localisation
 @using Presentation.Web.Services
 @inject LocalisationApiService ApiService
 @inject NavigationManager Navigation
