--- a/src/Presentation.Web/Presentation.Web/Components/Pages/SystemePartenaires/Index.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/SystemePartenaires/Index.razor
@@ -1,5 +1,6 @@
 @page "/systeme-partenaires"
 @using Application.DTOs
+@using Application.DTOs.SystemePartenaire
 @using Microsoft.AspNetCore.WebUtilities
 @using Presentation.Web.Services
 @inject SystemePartenaireApiService ApiService
