--- a/src/Presentation.Web/Presentation.Web/Components/Pages/UniteMesure/Edit.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/UniteMesure/Edit.razor
@@ -1,5 +1,6 @@
 @page "/unitemesure/edit/{id:guid}"
 @using Application.DTOs
+@using Application.DTOs.UniteMesure
 @using Domain.Enums
 @using Presentation.Web.Services
 @inject UniteMesureApiService ApiService
