--- a/src/Presentation.Web/Presentation.Web/Components/Pages/Localisations/Create.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/Localisations/Create.razor
@@ -1,5 +1,6 @@
-@page "/localisations/create"
+cl@page "/localisations/create"
 @using Application.DTOs
+@using Application.DTOs.Localisation
 @using Presentation.Web.Services
 @inject LocalisationApiService ApiService
 @inject NavigationManager Navigation
