--- a/src/Presentation.Web/Presentation.Web/Components/Pages/Sonde/Edit.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/Sonde/Edit.razor
@@ -1,8 +1,12 @@
 @page "/localisations/edit/{id:guid}"
-@using Application.DTOs
+@using Application.DTOs.Sonde
 @using Application.DTOs.Localisation
+@using Application.DTOs.UniteMesure
+@using Domain.Enums
 @using Presentation.Web.Services
-@inject LocalisationApiService ApiService
+@inject SondeApiService ApiService
+@inject LocalisationApiService LocalisationService
+@inject UniteMesureApiService UniteMesureService
 @inject NavigationManager Navigation
 @rendermode InteractiveServer
 
@@ -84,7 +88,7 @@ else
     {
         try
         {
-            var localisation = await ApiService.GetByIdAsync(Id);
+            var localisation = await LocalisationService.GetByIdAsync(Id);
 
             if (localisation == null)
             {
@@ -120,7 +124,7 @@ else
 
         try
         {
-            await ApiService.UpdateAsync(model);
+            await LocalisationService.UpdateAsync(model);
             Navigation.NavigateTo("/localisations");
         }
         catch (HttpRequestException ex)
