--- a/src/Presentation.Web/Presentation.Web/Components/Pages/SystemePartenaires/Create.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/SystemePartenaires/Create.razor
@@ -1,5 +1,6 @@
 @page "/systeme-partenaires/create"
 @using Application.DTOs
+@using Application.DTOs.SystemePartenaire
 @using Presentation.Web.Services
 @inject SystemePartenaireApiService ApiService
 @inject NavigationManager Navigation
