--- a/src/Presentation.Web/Presentation.Web/Components/Pages/SystemePartenaires/Edit.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/SystemePartenaires/Edit.razor
@@ -1,5 +1,6 @@
 @page "/systeme-partenaires/edit/{id:guid}"
 @using Application.DTOs
+@using Application.DTOs.SystemePartenaire
 @using Presentation.Web.Services
 @inject SystemePartenaireApiService ApiService
 @inject NavigationManager Navigation
