--- a/src/Presentation.Web/Presentation.Web/Components/Pages/UniteMesure/Create.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/UniteMesure/Create.razor
@@ -1,5 +1,6 @@
 @page "/unitemesure/create"
 @using Application.DTOs
+@using Application.DTOs.UniteMesure
 @using Domain.Enums
 @using Presentation.Web.Services
 @inject UniteMesureApiService ApiService
