--- a/src/Presentation.Web/Presentation.Web/Components/Pages/UniteMesure/Delete.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/UniteMesure/Delete.razor
@@ -1,5 +1,6 @@
 @page "/unitemesure/delete/{id:guid}"
 @using Application.DTOs
+@using Application.DTOs.UniteMesure
 @using Presentation.Web.Services
 @inject UniteMesureApiService ApiService
 @inject NavigationManager Navigation
