--- a/src/Presentation.Web/Presentation.Web/Components/Pages/UniteMesure/Index.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/UniteMesure/Index.razor
@@ -1,5 +1,6 @@
 @page "/unitemesure"
 @using Application.DTOs
+@using Application.DTOs.UniteMesure
 @using Domain.Enums
 @using Presentation.Web.Services
 @inject UniteMesureApiService ApiService
