--- a/src/Presentation.Web/Presentation.Web/Components/Pages/Sonde/Delete.razor
+++ b/src/Presentation.Web/Presentation.Web/Components/Pages/Sonde/Delete.razor
@@ -1,4 +1,4 @@
-@page "/localisations/delete/{id:guid}"
+@page "/sonde/delete/{id:guid}"
 @using Application.DTOs.Sonde
 @using Application.DTOs.Localisation
 @using Application.DTOs.UniteMesure
